[package]
name = "cloudflare_dynamic_dns"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
strip = "symbols"
lto = "fat"
codegen-units = 1

[dependencies]

[dependencies.log]
version = "0.4.29"

[dependencies.reqwest]
version = "0.12.25"
features = ["json"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.145"

[dependencies.tokio]
version = "1.48.0"
features = ["full"]